--- a/composer.json
+++ b/composer.json
@@ -5,50 +5,34 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "composer/package-versions-deprecated": "^1.11",
-        "doctrine/annotations": "^1.0",
-        "doctrine/doctrine-bundle": "^2.1",
-        "doctrine/doctrine-migrations-bundle": "^3.0",
-        "doctrine/orm": "^2.7",
-        "phpdocumentor/reflection-docblock": "^5.2",
-        "sensio/framework-extra-bundle": "^5.1",
+        "doctrine/inflector": "^1.2",
+        "easycorp/easyadmin-bundle": "^2.3",
+        "fzaninotto/faker": "^1.9",
+        "lexik/jwt-authentication-bundle": "^2.7",
+        "sensio/framework-extra-bundle": "^5.5",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
+        "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "5.0.*",
-        "symfony/expression-language": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
-        "symfony/http-client": "5.0.*",
-        "symfony/intl": "5.0.*",
-        "symfony/mailer": "5.0.*",
-        "symfony/monolog-bundle": "^3.1",
+        "symfony/maker-bundle": "^1.17",
         "symfony/notifier": "5.0.*",
-        "symfony/process": "5.0.*",
-        "symfony/property-access": "5.0.*",
-        "symfony/property-info": "5.0.*",
-        "symfony/security-bundle": "5.0.*",
-        "symfony/serializer": "5.0.*",
+        "symfony/orm-pack": "^1.0",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/security-csrf": "5.0.*",
+        "symfony/serializer-pack": "^1.0",
         "symfony/string": "5.0.*",
-        "symfony/translation": "5.0.*",
-        "symfony/twig-bundle": "5.0.*",
+        "symfony/twig-pack": "^1.0",
         "symfony/validator": "5.0.*",
-        "symfony/web-link": "5.0.*",
-        "symfony/yaml": "5.0.*",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "symfony/yaml": "5.0.*"
     },
     "require-dev": {
-        "symfony/browser-kit": "^5.0",
-        "symfony/css-selector": "^5.0",
-        "symfony/debug-bundle": "^5.0",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/monolog-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^5.1",
-        "symfony/stopwatch": "^5.0",
-        "symfony/twig-bundle": "^5.0",
-        "symfony/var-dumper": "^5.0",
-        "symfony/web-profiler-bundle": "^5.0"
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "nelmio/alice": "^3.7",
+        "symfony/test-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
